<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt_descripcion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Venta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_escan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <EditText
                android:id="@+id/txt_cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_codigo"
                android:inputType="textPersonName"
                android:maxLength="18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Descripción" />

            <EditText
                android:id="@+id/txt_desc"
                android:layout_width="246dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="@string/txt_descripcion"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Unidades" />

            <EditText
                android:id="@+id/txt_und"
                android:layout_width="249dp"
                android:layout_height="wrap_content"
                android:editable="false"
                android:ems="10"
                android:hint="Unidades disponibles"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_valorcompra" />

            <EditText
                android:id="@+id/txt_valcompra"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_valorcompra"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_valorventa" />

            <EditText
                android:id="@+id/txt_vventa"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_valorventa"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:text="@string/txt_uvendidas" />

            <EditText
                android:id="@+id/txt_uvender"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_uvendidas"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_consulta" />

            <Button
                android:id="@+id/bt_venta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bt_venta" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-8242256510253784/9810165001"></com.google.android.gms.ads.AdView>
    </LinearLayout>
</RelativeLayout>