<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070000"
    android:orientation="vertical"
    tools:context=".Registro">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_escanear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#01092C"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <EditText
                android:id="@+id/txt_codigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_codigo"
                android:inputType="textPersonName"
                android:maxLength="18"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_descripcion"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_descripcion"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

            <ImageButton
                android:id="@+id/bt_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#01092C"
                app:srcCompat="@android:drawable/ic_menu_report_image" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txt_vcompra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_valorcompra"
                android:inputType="numberSigned"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

            <EditText
                android:id="@+id/txt_Vventa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_valorventa"
                android:inputType="numberSigned"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="Unidades"
                android:textColor="#F4C128"
                android:textColorHighlight="#F4C128"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txt_unidades"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/txt_unidades"
                    android:inputType="numberSigned"
                    android:text="1"
                    android:textAllCaps="false"
                    android:textColor="#F4C128"
                    android:textColorHint="#F4C128" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#01092C"
                    app:srcCompat="@android:drawable/ic_notification_clear_all" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#01092C"
                    app:srcCompat="@android:drawable/ic_menu_add" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnImage"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imgProducto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/divider_horizontal_dim_dark" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_cons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#01092C"
                android:text="@string/bt_consulta"
                android:textColor="#F4C128"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#01092C"
                android:text="@string/bt_guardar"
                android:textColor="#F4C128" />

            <Button
                android:id="@+id/bt_modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:background="#01092C"
                android:enabled="false"
                android:text="@string/bt_modificar"
                android:textColor="#F1DA95" />
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-8242256510253784/2314818363"></com.google.android.gms.ads.AdView>
    </LinearLayout>
</RelativeLayout>