<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="Lleva un inventario rapido de tus prouctos."
            android:textAlignment="inherit"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_registrar"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#C8CDE4"
                android:freezesText="false"
                android:text="@string/bt_registro"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/bt_venta"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#C8CDE4"
                android:text="@string/bt_venta"
                android:textColor="@android:color/background_dark"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/bt_ganancias"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#C8CDE4"
                android:text="@string/bt_Inventario"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-8242256510253784/7389899693"></com.google.android.gms.ads.AdView>

    </LinearLayout>
</RelativeLayout>