<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Estadistica">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ln_masvendido"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_view"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            tools:srcCompat="@tools:sample/avatars" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Valor Obtenido: "
                            android:textColor="#F4C128" />

                        <TextView
                            android:id="@+id/txt_msvendido"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#F4C128" />

                    </TableRow>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="Producto que ha generado más ingresos: "
                android:textColor="#F4C128"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="Revisa los valores invertidos y obtenidos de tus productos"
            android:textColor="#F4C128"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chb_Totales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/chb_total"
                android:textColor="#F4C128" />

            <CheckBox
                android:id="@+id/chb_xproducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chb_prod"
                android:textColor="#F4C128" />

            <CheckBox
                android:id="@+id/chb_xfecha"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/chb_fecha"
                android:textColor="#F4C128" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnano"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_ano"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="YYYY"
                android:inputType="date"
                android:maxLength="4"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Escribe el año"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnmes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_mes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Selecciona el Mes"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

            <Spinner
                android:id="@+id/SPmonth"
                android:layout_width="122dp"
                android:layout_height="46dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_cod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/bt_scanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#01092C"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <EditText
                android:id="@+id/et_cod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/txt_codigo"
                android:inputType="textPersonName"
                android:maxLength="18"
                android:textColor="#F4C128"
                android:textColorHint="#F4C128" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lninvertido"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total Invertido"
                android:textColor="#F4C128" />

            <EditText
                android:id="@+id/et_TotalInv"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#F4C128" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnganado"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total Obtenido"
                android:textColor="#F4C128" />

            <EditText
                android:id="@+id/et_TotalGanado"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#F4C128" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_xfecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#01092C"
                android:text="Fecha"
                android:textColor="#F4C128"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_xprod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#01092C"
                android:text="Producto"
                android:textColor="#F4C128"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_totales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#01092C"
                android:text="Totales"
                android:textColor="#F4C128"
                android:visibility="visible" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_weight="1" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="LARGE_BANNER"
            app:adUnitId="ca-app-pub-8242256510253784/7406167401"></com.google.android.gms.ads.AdView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>